# mb-challenger

./: .env.sample  .env.test  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yaml  dockerfile  main.py  pyproject.toml  requirements.txt  setup.py
alembic/: env.py
alembic/versions/: 2025_04_26_1027-0b26a46e0c27_added_initial_tables.py  2025_04_26_1817-a883ad67d6aa_initial_table.py
scripts/: populate_initial.py  populate_table_by_range.py  populate_today.py
src/: __init__.py
src/apps/: __init__.py
src/apps/mms/: endpoint.py  services.py
src/apps/root/: __init__.py  endpoint.py
src/core/: database.py  exceptions.py  settings.py  utils.py
src/core/models/: __init__.py  mms.py
src/core/repository/: mercado_bitcoin.py  mms_repo.py
src/core/schemas/: __init__.py
tests/: conftest.py
tests/apps/: test_mms.py  test_root.py
tests/core/: test_utils.py
tests/factory/: mms.py
