[project]
name = "mb-challenger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "psycopg>=3.2.6",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
    "sqlmodel>=0.0.24",
    "testcontainers[postgres]>=4.10.0",
    "uvicorn>=0.34.2",
]
